<resources>
    <string name="app_name">Skinny Comps</string>
    <string name="header_daily_habits">Fill out the Daily Life Chart each day to  track your wellness habits!</string>
    <string name="bot_text">Fill out the Daily Life Chart each day to  track your wellness habits!</string>
    <string name="qwerty">theskinnyconfidential</string>
    <string name="qwerty2">KIMKELLYFIT</string>
    <string name="daily_habits_header">Fill out the Daily Life Chart each day to track your wellness habits!</string>
    <string name="download_your_daily_habits_chart">DOWNLOAD YOUR DAILY HABITS CHART</string>
    <string name="breakfast_daily_habits">Breakfast</string>
    <string name="text_daily_habits_1"><![CDATA[KIM & LAURYN NEVER SKIP BREAKFAST. Two & half hours later is always a snack. They both love fiber, protein, greens, & LIGHT, healthy fat. Make sure you\'re eating enough to rev up your metabolism. When you go long stretches of time without food, you\'re slowing down your metabolism. You don\'t want to train your body to store fat. SO eat. Especially breakfast. It sets the tone of the day.]]></string>
    <string name="self_care">Self-Care</string>
    <string name="text_daily_habits_2"><![CDATA[Lauryn & Kim LOVE SELF-CARE. This can be anything from meditation, chiropractor, acupuncture, cupping, massage, facials, hot bath, aromatherapy, rosé (HAHA), listening podcasts, reading, etc. When you\'re your best self, you can show up for other\'s better. Self-care is SO IMPORTANT.]]></string>
    <string name="text_daily_habits_3"><![CDATA[Lauryn likes to aim for 7 to 9 and Kim likes to get 7 to 8 hours. Sleep is SO IMPORTANT. Get in bed & unplug at least an hour before. Lauryn likes to read a hard-cover book before bed & Kim likes to listen to music or meditate. They both like noise-canceling headphones too (so Lauryn can avoid Michael\'s 384732 questions).]]></string>
    <string name="water">Water</string>
    <string name="text_dayly_habits_4"><![CDATA[We know, we know- this is what everyone tells you BUT it\'s important. Aim for half your body weight in ounces. Kim & Lauryn carry around a Hydroflask (Lauryn especially loves her pink Starbucks cup). Both of them keep the water cold which is ideal. Get creative with your water- use non-caffeinated tea, add mint, lemon, berries, or basil (Lauryn loves basil in her water, Kim loves basil & strawberries in her water). Even freezing berries in ice & adding them to your water feels special. If you\'re not into water, set alarms in your phone to remind you to GULPY-GULP. If you\'re drinking, have a glass of water for every cocktail! ALWAYS. Try for non-bubbly if you\'re drinking alcohol. Lauryn LOVES PEPPERMINT TEA. Lately she\'s been doing mint leaves in hot water. This soothes the digestive system. Kim loves a straw because it\'s easier to drink. The Hydroflask has a straw built in & Lauryn loves SoftyStraws too. Water-based foods like cucumber, lettuce, & watermelon are great too.]]></string>
    <string name="sex">Sex</string>
    <string name="text_daily_habits_5">Sex is a mood-lifting hormone! Get in sex when you can- HA. It\'s your feel good hormone. If you can\'t have sex, 2018 is all about the self-love. Have some fun. We both love coconut oil based lube like WOO FOR PLAY.</string>
    <string name="steps">Steps</string>
    <string name="text_daily_habits_6">Lauryn likes to count her steps on the PACER APP. Kim likes her Apple watch. Both are great. They both like to aim for 10k minimum a day, but 15k is a goal (very ideal!). Lauryn likes to get her steps in on the Treadmill while returning e-mails. Kim likes to park far away from where she has to go. Kim also likes to walk her dog while on a conference call. Be resourceful!</string>
    <string name="sweat">Sweat</string>
    <string name="text_daily_habits_7">This is obvious. TRY TO BREAK A SWEAT ONCE A DAY. 7 minute workouts count!</string>
    <string name="text_daily_habits_8">Fill out the Daily Life Chart each day to track your wellness habits!</string>
    <string name="text_button_daily_habits_2">DOWNLOAD YOUR DAILY HABITS CHART</string>
    <string name="_15_best_plant_based_protein_sources">15 BEST PLANT-BASED PROTEIN SOURCES</string>
    <string name="green_peace">GREEN PEACE</string>
    <string name="quinoa">QUINOA</string>
    <string name="nuts_and_betters">NUTS AND BETTERS</string>
    <string name="beans">BEANS</string>
    <string name="checkpeas">CHECKPEAS</string>
    <string name="tempeh_and_tofu">TEMPEH AND TOFU</string>
    <string name="edamame">EDAMAME</string>
    <string name="leafy_greens">LEAFY GREENS</string>
    <string name="hemp">HEMP</string>
    <string name="chia_seeds">CHIA SEEDS</string>
    <string name="sesamr_sunflower_and_poppy_seeds">SESAMR, SUNFLOWER, AND POPPY SEEDS</string>
    <string name="seitan">SEITAN</string>
    <string name="non_dairy_milk">NON-DAIRY MILK</string>
    <string name="unsweetened_cocoa_powder">UNSWEETENED COCOA POWDER</string>
    <string name="avoid">Avoid</string>
    <string name="soy_full_of_gos_linked_to_disease">+ soy - full of GOs linked to disease</string>
    <string name="dairy_if_vegan">+ dairy,if vegan</string>
    <string name="addivives_and_processed_ingredients">+ addivives and processed ingredients</string>
    <string name="whey_that_is_pasteurized_and_heat_ntreated_disruptive_to_health">+ whey that is pasteurized and heat  treated - disruptive to health</string>
    <string name="look_for">Look for</string>
    <string name="building_muscle_whey_amp_whey_isolates_bcaas"><![CDATA[+ building muscle = whey & whey isolates, BCAAs]]></string>
    <string name="lose_weight_no_added_sugars_or_maldextrons_no_bcaas">+ lose weight = no added sugars or maldextrons, no BCAAs</string>
    <string name="vegan_use_plant_proteins_such_as_hemp_or_pea">+ vegan - use plant proteins such as hemp or pea</string>
    <string name="a_brand_that_tests_for_level_of_poisons">+ a brand that tests for level of poisons</string>
    <string name="how_to_use_it">HOW TO USE IT:</string>
    <string name="post_pictures_after_you_ve_completed_your_workout">+ post pictures after you\'ve completed your workout</string>
    <string name="share_your_progress_and_struggles">+ share your progress and struggles</string>
    <string name="show_us_what_protein_you_re_eating_post_workout">+ show us what protein you\'re eating post workout</string>
    <string name="encourage_others_and_find_support_to_quot_get_it_done_quot">+ encourage others and find support to \"get it done\"</string>
    <string name="add_in">Add in:</string>
    <string name="fill_up_on_veggies">• Fill up on veggies</string>
    <string name="eat_more_fish">• Eat MORE FISH</string>
    <string name="choose_leaner_meats">• CHOOSE leaner meats</string>
    <string name="stay_hydrated_consume_half_your_bodyweight_in_ounces_of_water_everyday_more_in_warmer_climates_on_workout_days"><![CDATA[• Stay hydrated: consume HALF your bodyweight in ounces of water everyday (more in warmer climates & on workout days)]]></string>
    <string name="know_your_good_carbs">• KNOW your GOOD CARBS</string>
    <string name="choose_baked_steamed_or_grilled_foods">• CHOOSE baked, steamed or grilled foods</string>
    <string name="legumes">+ legumes</string>
    <string name="sweet_potato">+ sweet potato</string>
    <string name="whole_grains">+ whole grains</string>
    <string name="quinoa_1">+ quinoa</string>
    <string name="brown_rice">+ brown rice</string>
    <string name="substitutes">SUBSTITUTES</string>
    <string name="mushrooms_as_chips_use_them_to_dip_in_hummus_dressings_sauces">+ mushrooms as chips (use them to dip in hummus, dressings, sauces).</string>
    <string name="english_cucumber_or_jicama_as_dippers_too">+ english cucumber or jicama as dippers too.</string>
    <string name="endive_lettuce_for_chips_with_guacamole">+ endive lettuce for chips with guacamole.</string>
    <string name="hearts_of_palm_pasta_is_fab_zoodles_are_good_too">+ HEARTS OF PALM PASTA is FAB (zoodles are good too).</string>
    <string name="cauliflower_rice_cauliflower_crust_pizza_is_so_good_we_re_about_this"><![CDATA[+ cauliflower rice & cauliflower crust pizza IS SO GOOD. we\'re about this!]]></string>
    <string name="purple_cabbage_as_taco_shells">+ purple cabbage as taco shells.</string>
    <string name="cauliflower_mashed_potatoes_taste_pretty_damn_good">+ cauliflower mashed potatoes taste pretty damn good.</string>
    <string name="use_nutritional_yeast_instead_of_parmesan_cheese">+ use nutritional yeast instead of parmesan cheese.</string>
    <string name="use_coconut_aminos_instead_of_soy_we_re_not_big_soy_fans">+ use coconut aminos instead of soy- we\'re not big soy fans.</string>
    <string name="wrap_your_sushi_in_cucumber_it_s_so_good">+ wrap your sushi in cucumber. IT\'S SO GOOD.</string>
    <string name="use_gg_crackers_as_a_vehicle">+ use GG crackers as a vehicle.</string>
    <string name="order_tacos_or_burgers_wrapped_in_lettuce_instead_of_a_tortilla_or_bun">+ order tacos or burgers wrapped in lettuce instead of a tortilla or bun.</string>
    <string name="dining_out">DINING OUT</string>
    <string name="when_you_order_ask_for_no_salt">+ when you order ask for no salt.</string>
    <string name="always_modify_ask_for_veggies_instead_of_chips">+ always modify: ask for veggies instead of chips.</string>
    <string name="make_your_own_dressing_at_restaurants_olive_oil_lemon_red_wine_vinegar"><![CDATA[+ make your own dressing at restaurants: olive oil, lemon, & red wine vinegar.]]></string>
    <string name="salsa_over_ketchup">+ salsa over ketchup!</string>
    <string name="ask_for_an_oil_free_pan_ask_them_to_spray_the_pan_instead">+ ask for an oil free pan - ask them to spray the pan instead.</string>
    <string name="drink_a_full_glass_of_water_in_between_any_alcoholic_drinks">+ drink a full glass of water in between any alcoholic drinks.</string>
    <string name="habits">HABITS</string>
    <string name="bone_broth_4_x_a_week_lots_of_lemon">+ BONE BROTH 4 x a week! lots of lemon.</string>
    <string name="carry_ggs_in_your_purse_they_re_fab">+ carry GGs in your purse- they\'re fab.</string>
    <string name="protein_fiber_at_every_meal"><![CDATA[+ protein & fiber at every meal!]]></string>
    <string name="use_portion_controlled_bowls_at_home_try_not_to_eat_out_of_the_bag_try_inside_out_bowls_from_anthropologie_or_snack_sized_ziplock_bags_they_re_fab">+ use portion controlled bowls at home- try not to eat out of the bag. try INSIDE OUT BOWLS from Anthropologie or snack-sized ziplock bags. they\'re FAB.</string>
    <string name="don_t_fall_for_cocktail_mixes_make_your_own">+ don\'t fall for cocktail mixes! make your own.</string>
    <string name="don_t_fall_for_paleo_vegan_gluten_free_always_check_ingredients_we_look_at_ingredients_and_carb_counts">+ don\'t fall for paleo, vegan, gluten-free — ALWAYS check ingredients! we look at ingredients and CARB counts.</string>
    <string name="herbs_spices_are_your_friend"><![CDATA[+ HERBS & SPICES ARE YOUR FRIEND.]]></string>
    <string name="be_prepared"><![CDATA[+ be prepared: Kim loves almonds, rolled organic turkey, GGs with raw peanut butter, non-dairy yogurt with a scoop of protein & berries- get creative!]]></string>
    <string name="start_with_a_soup_or_leafy_green_salad">+ start with a soup or leafy green salad.</string>
    <string name="start_every_morning_with_lemon_water">+ start every morning with lemon water.</string>
    <string name="apple_cider_vinegar_shots_are_amazing_in_the_morning_2_3_apple_cider_vinegar_shots_are_great_throughout_the_day">+ apple cider vinegar shots are amazing in the morning! 2-3 apple cider vinegar shots are great throughout the day.</string>
    <string name="start_the_day_with_a_protein_green_smoothie_with_berries_add_spirulina"><![CDATA[+ start the day with a PROTEIN green smoothie with berries (& add spirulina!).]]></string>
</resources>