<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#FFEFF2"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium_font"
                android:text="@string/add_in"
                android:textSize="25sp" />


            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/fill_up_on_veggies"
                android:textSize="19sp" />


            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/eat_more_fish"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/choose_leaner_meats"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/stay_hydrated_consume_half_your_bodyweight_in_ounces_of_water_everyday_more_in_warmer_climates_on_workout_days"
                android:textSize="19sp" />


            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/know_your_good_carbs"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/brown_rice"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/quinoa_1"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/whole_grains"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/sweet_potato"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/legumes"
                android:textSize="19sp" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/reg_font"
                android:text="@string/choose_baked_steamed_or_grilled_foods"
                android:textSize="19sp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>